--- a/gasipan/src/main/resources/templates/adminLogin.html
+++ b/gasipan/src/main/resources/templates/adminLogin.html
@@ -9,9 +9,10 @@
 		<h2>관리자 로그인</h2>
 		<form action="/logging" method="post">
 			<span>ID</span>
-			<input type="text" id="id" name="id" value="">
+			<input type="text" name="id" value="">
 			<span>PW</span>
 			<input type="password" id="pwd" name="pwd" value="">
+			<input type="hidden" name="authority" value="admin">
 			<button>로그인</button>
 		</form>
 	</div>
