--- a/gasipan/src/main/resources/templates/index.html
+++ b/gasipan/src/main/resources/templates/index.html
@@ -8,7 +8,9 @@
 	<div>
 		<h1>메인 화면</h1>
 		<span> [[${appleColor}]]</span>
+		
 		<a href="/loginPage">로그인</a>
+		<a href="/logout">로그아웃</a>
 	</div>
 </body>
 </html>
