--- a/gasipan/src/main/resources/templates/login.html
+++ b/gasipan/src/main/resources/templates/login.html
@@ -14,11 +14,12 @@
 		  <div>
 		    <span>PWD</span>
 		    <input type="password" name="pwd" value=""/>
+		    <input type="hidden" name="authority" value="user"/>
 		  </div>
 		  <div>
 		    <input type="submit" value="로그인" />
 		  </div>
-		  <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+		  <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
 		</form>
 	</div>
 </body>
