--- a/gasipan/src/main/resources/templates/join.html
+++ b/gasipan/src/main/resources/templates/join.html
@@ -95,6 +95,7 @@ var main = {
 				<div class="row indent-20">
 					<label class="text-label col-10">아이디</label>
 					<input type="text" class="text-input col-20" id="userId" name="userId" value="">
+					<input type="hidden" class="text-input col-20" id="authority" name="authority" value="USER" readonly="readonly">
 					<span id="id-validate" class="validate-text">최대 20자까지 입력 가능합니다.</span>
 				</div>
 				
