--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -7,7 +7,7 @@
 <body>
 	<div>
 		<h2>관리자 로그인</h2>
-		<form action="#" th:action="@{/login}" method="post">
+		<form action="#" th:action="@{/admin/login}" method="post">
 		  <div>
 		  	<span>ID</span>
 		    <input type="text" name="id" value=""/>
