--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>회원가입</title>
@@ -12,12 +12,6 @@
 <script type="text/javascript">
 
 // CSRF ( Cross Site Request Forgery ) 방지 토큰
-var _csrf = '';
-var _csrf_header = '';
-
-// use thymeleaf in a js
-_csrf = '[[${_csrf.token}]]';
-_csrf_parameterName = '[[${_csrf.parameterName}]]';
 
 $(document).ready(function() {
 
@@ -123,7 +117,7 @@ var main = {
 						<button id="btnPost" class="btn-search">우편번호 검색</button>
 					</span>
 				</div>
-				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+				<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
 				<div class="row">
 					<span class="text-label col-10 right">
 						<button id="btnRegist" class="btn-regist">제출</button>
