--- a/src/main/resources/templates/userLogin.html
+++ b/src/main/resources/templates/userLogin.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="utf-8">
 <title>게시판</title>
 </head>
 <body>
 	<div>
-		<form action="#" th:action="@{/login}" method="post">
+		<form action="#" th:action="@{/user/login}" method="post">
 		  <div>
 		  	<span>ID</span>
 		    <input type="text" name="id" value=""/>
