--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
+    <link href="css/index.css" rel="stylesheet">
+    <script src="js/jquery.js"></script>
+    <script src="js/menu-control.js"></script>
 <title>게시판</title>
 </head>
 <body>
-	<div>
-		<h1>메인 화면</h1>
-		<a th:if="${#strings.isEmpty(ssUser)}" th:href="@{/user/loginPage}">로그인</a>
-		<a th:unless="${#strings.isEmpty(ssUser)}" th:href="@{/user/logout}">로그아웃</a> 
+	<div id="wrap">
+		<div th:replace="/include/header"></div>
+        <div class="conts">
+            <article class="slide-area">
+                <div class="slide-imgs" >
+                    <img src="image/img1.png" width="33.3%" height="600">
+                    <img src="image/img2.png" width="33.3%" height="600">
+                    <img src="image/img3.png" width="33.3%" height="600">
+                </div>
+            </article>
+            <section class="conts-items">
+                <div class="conts-item1">갤러리</div>
+                <div class="conts-item2">배너</div>
+                <div class="conts-item3">바로가기</div>
+            </section>
+        </div>
+        <footer class="footer">
+            <div class="copyright-area">
+                <span>gasipan footer</span>
+            </div>
+        </footer>		
 	</div>
 </body>
 </html>
