--- a/src/main/resources/static/css/common_user.css
+++ b/src/main/resources/static/css/common_user.css
@@ -110,3 +110,43 @@
 .btn-regist:hover {
 	cursor:pointer;
 }
+
+
+/* login Page */
+.logo-section{float: left; width: 100%;}
+.logo-text-sm{
+    float: left; font-size: 60px; width: 100%; text-align: center; margin-top: 5%; margin-bottom: 1%; color: #52527a;
+}
+
+.login-section{float: left; width: 40%; margin-left: 30%; margin-right: 30%; margin-top: 1%;}
+.login-form{float:left; width: 100%;}
+
+.form-row{float:left; width: 100%;}
+.row-shadow{
+    margin: 0; width: 100%; height: 60px; padding: 0; 
+    border: solid 2px #d1d1e0; margin-top:20px; margin-bottom:10px;
+}
+.lb-text{
+    float: left; width: 20%; font-size: 25px; padding: 10px; text-align: center; margin-right: 5px;
+}
+.input-col{float: left; display: block; width: 60%; height: 35px;
+    margin: 10px; border: solid 1px #d1d1e0;
+}
+.input-col:focus{ outline: solid 1px #666699;}
+
+.form-footer{float: left; width: 100%; margin-top: 5%;}
+
+.btn-success{float: left; width: 100%; height: 50px; font-size: 20px; background-color: #8585ad; color: #fff; border: none;}
+
+.mg-top-10{margin-top: 10px;}
+
+.ft-sz-18{font-size: 18px;}
+.txt-center{text-align: center;}
+.txt-decor-ln-none{text-decoration-line: none;}
+
+.color-5c00e6{color:#5c00e6;}
+.color-4700b3{color: #4700b3;}
+.color-8585ad{color: #8585ad;}
+.color-7575a3{color: #7575a3;}
+.color-666699{color: #666699;}
+.bg-grayPurple{background-color: #8585ad; color: #fff;}
