--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 	<meta charset="utf-8">
+	<link rel="shortcut icon" href="#">
     <link href="css/index.css" rel="stylesheet">
-    <script src="js/jquery.js"></script>
-    <script src="js/menu-control.js"></script>
-<title>게시판</title>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/menu-control.js"></script>
+	<title>게시판</title>
 </head>
 <body>
 	<div id="wrap">
