--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -11,7 +11,7 @@
 		<a th:unless="${#strings.isEmpty(admin)}" th:href="@{/admin/logout}">로그아웃</a>	
 	</div>
 	<div>
-		<span>관리자 : [[${admin.userId}]]</span>
+		<span>관리자 페이지</span>
 	</div>
 </body>
 </html>
