--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layout/main_layout}">
 <head>
-	<meta charset="utf-8">
-	<link rel="shortcut icon" href="#">
-    <link href="css/index.css" rel="stylesheet">
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/menu-control.js"></script>
-	<title>게시판</title>
+
+
+
 </head>
-<body>
-	<div id="wrap">
-		<div th:replace="/include/header"></div>
+<th:block layout:fragment="content">
         <div class="conts">
             <article class="slide-area">
                 <div class="slide-imgs" >
@@ -29,7 +27,6 @@
             <div class="copyright-area">
                 <span>gasipan footer</span>
             </div>
-        </footer>		
-	</div>
-</body>
+        </footer>
+</th:block>
 </html>
