--- a/src/main/resources/templates/fragment/admin_header.html
+++ b/src/main/resources/templates/fragment/admin_header.html
@@ -1,3 +1,5 @@
+<html xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="admin-header">
 <header class="admin-header">
     <div class="logo-area">
         <span class="logo">logo</span>
@@ -14,3 +16,5 @@
         <!-- // 로그인 여부 -->
     </div>
 </header>
+</th:block>
+</html>
