--- a/src/main/resources/templates/layout/basic_layout.html
+++ b/src/main/resources/templates/layout/basic_layout.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+<!-- meta -->
 <meta charset="UTF-8">
-<title>Insert title here</title>
+
+<!-- title -->
+<title>게시판</title>
+
+<!-- css -->
+<link href="/css/index.css" rel="stylesheet" type="text/css">
+
+<!-- script -->
+<script type="text/javascript" src="/js/jquery.js"></script>
+<script type="text/javascript" src="/js/menu-control.js"></script>
+<th:block layout:fragment="script"></th:block>
 </head>
 <body>
-
+	<div id="wrap">
+		<th:block th:replace="/fragment/header :: header"></th:block>
+        <th:block layout:fragment="content"></th:block>			
+	</div>
 </body>
 </html>
