--- a/src/main/resources/templates/layout/basic_layout.html
+++ b/src/main/resources/templates/layout/basic_layout.html
@@ -10,12 +10,13 @@
 
 <!-- css -->
 <link href="/css/index.css" rel="stylesheet" type="text/css">
+<link href="/css/basic.css" rel="stylesheet" type="text/css">
 
 <!-- script -->
 <script type="text/javascript" src="/js/jquery.js"></script>
 <script type="text/javascript" src="/js/menu-control.js"></script>
-<th:block layout:fragment="script"></th:block>
 </head>
+<th:block layout:fragment="script"></th:block>
 <body>
 	<div id="wrap">
 		<th:block th:replace="/fragment/header :: header"></th:block>
