--- a/src/main/resources/templates/user/notice/list.html
+++ b/src/main/resources/templates/user/notice/list.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  layout:decorate="~{layout/basic_layout}">
+	  layout:decorate="~{./layout/basic_layout}">
 <head>
+
+
+
 
 </head>
 <th:block layout:fragment="content">
         <div class="conts">
-            <div class="location-guide" style="float: left; width: 100%; height: 5%; padding-left: 5%; padding-right: 5%; padding-top: 1%; padding-bottom: 1%;">
-                <ul class="lg-ul" 
-                   style="display: block; float: left; width: 80%; 
-                   margin-left: 10%; margin-right: 10%; font-size: 16pt;">
-                    <li style="float: left; width: 10%; list-style: none; text-align: center;">
+            <div class="location-guide">
+                <ul class="lg-ul">
+                    <li>
                         <span> ▶ HOME</span>
-                    </li>                   
-                    <li style="float: left; width: 10%; list-style: none; text-align: center;">
+                    </li>              
+                    <li>
                         <span> ▶ 게시판</span>
                     </li>
-                    <li style="float: left; width: 10%; list-style: none; text-align: center;">
+                    <li>
                         <span> ▶ 공지사항</span>
                     </li>
                 </ul>
             </div>
-            <div class="cont-body" style="width: 100%;">
-                <div class="sch-area" 
-                   style="float: left; width: 80%; margin-left: 10%; margin-right: 10%; background: #ccddbb;">
-                    <label>제목</label>
-                    <input type="text" class="sch-word" value="">
-                    <label>작성자</label>
-                    <input type="text" class="sch-word" value="">
-                    <button type="button" class="btn-search">검색</button>
+            <div class="cont-body">
+                <div class="sch-area">
+                	<div class="sch-row">
+	                    <label class="sch-lab mg-lf20">제목</label>
+	                    <input type="text" class="sch-word" value="">
+	                    <label class="sch-lab mg-lf10">작성자</label>
+	                    <input type="text" class="sch-word" value="">
+                    </div>
+                    <div class="btn-area">
+                    	<button type="button" class="btn-search mg-lf50">검색</button>
+                    	<button type="button" class="btn-down">다운로드</button>
+                    </div>
                 </div>
-                <div class="data-area" style="width: 80%; padding-left: 10%; padding-right:10%;">
-                    <table class="data-tbl" 
-                       style="width: 100%; background-color: #efefefef; text-align: center;">
+                <div class="data-area">
+                    <table class="data-tbl mg-top2">
                         <colgroup>
                             <col style="width: 5%;">
                             <col style="width: 45%;">
