--- a/src/main/resources/templates/layout/basic_layout.html
+++ b/src/main/resources/templates/layout/basic_layout.html
@@ -20,7 +20,8 @@
 <body>
 	<div id="wrap">
 		<th:block th:replace="/fragment/header :: header"></th:block>
-        <th:block layout:fragment="content"></th:block>			
+        <th:block layout:fragment="content"></th:block>
+        <th:block th:replace="/fragment/footer :: footer"></th:block>			
 	</div>
 </body>
 </html>
