--- a/src/main/resources/templates/user/userLogin.html
+++ b/src/main/resources/templates/user/userLogin.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="/js/jquery-ui.js"></script>
 	<script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
-	<link rel="stylesheet" href="/css/common_user.css">
+	<link rel="stylesheet" href="/css/common-user.css">
 	<link rel="shortcut icon" href="#">
 	<title>게시판</title>
 </head>
