자유게시판 등록

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -9,18 +9,18 @@
 	    <div class="menu-area">
 	        <div class="loginYn">
 	            <span class="loginYn-text">
-	            	<a th:if="${#strings.isEmpty(ssUser)}" th:href="@{/user/loginPage}">로그인</a>
-	            	<a th:unless="${#strings.isEmpty(ssUser)}" th:href="@{/user/logout}">로그아웃</a>
+	            	<a th:if="${session.ssUserId eq null}" th:href="@{/user/loginPage}">로그인</a>
+	            	<a th:unless="${session.ssUserId eq null}" th:href="@{/user/logout}">로그아웃</a>
 	            </span>
 	            <span class="join-text">
-	            	<a th:if="${#strings.isEmpty(ssUser)}" th:href="@{/joinView}">회원가입</a>
+	            	<a th:if="${session.ssUserId eq null}" th:href="@{/joinView}">회원가입</a>
 	            </span>
 	        </div>
 	        <nav class="menus">
 	            <ul class="top-menu">
 	                <li><span class="top-menu-text">menu1</span>
 	                    <ul class="sub-menu">
-	                        <li>sub-menu1</li>
+	                        <li><a href="/freedom/list">자유게시판</a></li>
 	                        <li>sub-menu2</li>
 	                        <li>sub-menu3</li>
 	                    </ul>
