공지사항 목록 퍼블

--- a/src/main/resources/templates/user/notice/list.html
+++ b/src/main/resources/templates/user/notice/list.html
@@ -28,7 +28,7 @@
                 	<div class="sch-row">
 	                    <label class="sch-lab mg-lf20">제목</label>
 	                    <input type="text" class="sch-word" value="">
-	                    <label class="sch-lab mg-lf10">작성자</label>
+	                    <label class="sch-lab mg-lf10">등록일</label>
 	                    <input type="text" class="sch-word" value="">
                     </div>
                     <div class="btn-area">
